--- a/package.json
+++ b/package.json
@@ -110,6 +110,8 @@
   },
   "proxy": "http://localhost:9000",
   "devDependencies": {
-    "antd-mobile": "^2.0.1-alpha.0"
+    "antd-mobile": "^2.0.1-alpha.0",
+    "babel-plugin-import": "^1.6.3",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4"
   }
 }
